release 2.4.2-4 (upgrade to cassandra 3.0.10)