@@ -132,7 +132,8 @@ Function CalculateHeapSizes
     {
         return
     }
-    if (($env:MAX_HEAP_SIZE -and !$env:HEAP_NEWSIZE) -or (!$env:MAX_HEAP_SIZE -and $env:HEAP_NEWSIZE))
+
+    if ((($env:MAX_HEAP_SIZE -and !$env:HEAP_NEWSIZE) -or (!$env:MAX_HEAP_SIZE -and $env:HEAP_NEWSIZE)) -and ($using_cms -eq $true))
     {
         echo "Please set or unset MAX_HEAP_SIZE and HEAP_NEWSIZE in pairs.  Aborting startup."
         exit 1
@@ -141,7 +142,7 @@ Function CalculateHeapSizes
     $memObject = Get-WMIObject -class win32_physicalmemory
     if ($memObject -eq $null)
     {
-        echo "WARNING!  Could not determine system memory.  Defaulting to 2G heap, 512M newgen.  Manually override in conf\cassandra-env.ps1 for different heap values."
+        echo "WARNING!  Could not determine system memory.  Defaulting to 2G heap, 512M newgen.  Manually override in conf\jvm.options for different heap values."
         $env:MAX_HEAP_SIZE = "2048M"
         $env:HEAP_NEWSIZE = "512M"
         return
@@ -205,31 +206,31 @@ Function SetJsr223Env
         foreach ($file in Get-ChildItem -Path "$env:CASSANDRA_HOME\lib\jsr223\$jsrDir\*.jar")
         {
             $file = $file -replace "\\", "/"
-			$cp = $cp + ";" + """$file"""
+            $cp = $cp + ";" + """$file"""
         }
     }
     $env:CLASSPATH=$cp
 
-	# JSR223/JRuby - set ruby lib directory
-	if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jruby\ruby")
-	{
-		$env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Djruby.lib=$env:CASSANDRA_HOME\lib\jsr223\jruby"
-	}
-	# JSR223/JRuby - set ruby JNI libraries root directory
-	if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jruby\jni")
-	{
-		$env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Djffi.boot.library.path=$env:CASSANDRA_HOME\lib\jsr223\jruby\jni"
-	}
-	# JSR223/Jython - set python.home system property
-	if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jython\jython.jar")
-	{
-		$env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Dpython.home=$env:CASSANDRA_HOME\lib\jsr223\jython"
-	}
-	# JSR223/Scala - necessary system property
-	if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\scala\scala-compiler.jar")
-	{
-		$env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Dscala.usejavacp=true"
-	}
+    # JSR223/JRuby - set ruby lib directory
+    if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jruby\ruby")
+    {
+        $env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Djruby.lib=$env:CASSANDRA_HOME\lib\jsr223\jruby"
+    }
+    # JSR223/JRuby - set ruby JNI libraries root directory
+    if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jruby\jni")
+    {
+        $env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Djffi.boot.library.path=$env:CASSANDRA_HOME\lib\jsr223\jruby\jni"
+    }
+    # JSR223/Jython - set python.home system property
+    if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\jython\jython.jar")
+    {
+        $env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Dpython.home=$env:CASSANDRA_HOME\lib\jsr223\jython"
+    }
+    # JSR223/Scala - necessary system property
+    if (Test-Path "$env:CASSANDRA_HOME\lib\jsr223\scala\scala-compiler.jar")
+    {
+        $env:CASSANDRA_PARAMS=$env:CASSANDRA_PARAMS + " -Dscala.usejavacp=true"
+    }
 }
 
 #-----------------------------------------------------------------------------
@@ -280,7 +281,14 @@ Function ParseJVMInfo
     }
 
     $pa = $sa[1].Split("_")
-    $env:JVM_PATCH_VERSION=$pa[1]
+    $subVersion = $pa[1]
+    # Deal with -b (build) versions
+    if ($subVersion -contains '-')
+    {
+        $patchAndBuild = $subVersion.Split("-")
+        $subVersion = $patchAndBuild[0]
+    }
+    $env:JVM_PATCH_VERSION = $subVersion
 }
 
 #-----------------------------------------------------------------------------
@@ -314,7 +322,7 @@ Function SetCassandraEnvironment
     # Override these to set the amount of memory to allocate to the JVM at
     # start-up. For production use you may wish to adjust this for your
     # environment. MAX_HEAP_SIZE is the total amount of memory dedicated
-    # to the Java heap; HEAP_NEWSIZE refers to the size of the young
+    # to the Java heap. HEAP_NEWSIZE refers to the size of the young
     # generation. Both MAX_HEAP_SIZE and HEAP_NEWSIZE should be either set
     # or not (if you set one, set the other).
     #
@@ -326,11 +334,62 @@ Function SetCassandraEnvironment
     # times. If in doubt, and if you do not particularly want to tweak, go
     # 100 MB per physical CPU core.
 
+    #GC log path has to be defined here since it needs to find CASSANDRA_HOME
+    $env:JVM_OPTS="$env:JVM_OPTS -Xloggc:""$env:CASSANDRA_HOME/logs/gc.log"""
+
+    # Read user-defined JVM options from jvm.options file
+    $content = Get-Content "$env:CASSANDRA_CONF\jvm.options"
+    for ($i = 0; $i -lt $content.Count; $i++)
+    {
+        $line = $content[$i]
+        if ($line.StartsWith("-"))
+        {
+            $env:JVM_OPTS = "$env:JVM_OPTS $line"
+        }
+    }
+
+    $defined_xmn = $env:JVM_OPTS -like '*Xmn*'
+    $defined_xmx = $env:JVM_OPTS -like '*Xmx*'
+    $defined_xms = $env:JVM_OPTS -like '*Xms*'
+    $using_cms = $env:JVM_OPTS -like '*UseConcMarkSweepGC*'
+
     #$env:MAX_HEAP_SIZE="4096M"
     #$env:HEAP_NEWSIZE="800M"
     CalculateHeapSizes
 
     ParseJVMInfo
+
+    # We only set -Xms and -Xmx if they were not defined on jvm.options file
+    # If defined, both Xmx and Xms should be defined together.
+    if (($defined_xmx -eq $false) -and ($defined_xms -eq $false))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -Xms$env:MAX_HEAP_SIZE"
+        $env:JVM_OPTS="$env:JVM_OPTS -Xmx$env:MAX_HEAP_SIZE"
+    }
+    elseif (($defined_xmx -eq $false) -or ($defined_xms -eq $false))
+    {
+        echo "Please set or unset -Xmx and -Xms flags in pairs on jvm.options file."
+        exit
+    }
+
+    # We only set -Xmn flag if it was not defined in jvm.options file
+    # and if the CMS GC is being used
+    # If defined, both Xmn and Xmx should be defined together.
+    if (($defined_xmn -eq $true) -and ($defined_xmx -eq $false))
+    {
+        echo "Please set or unset -Xmx and -Xmn flags in pairs on jvm.options file."
+        exit
+    }
+    elseif (($defined_xmn -eq $false) -and ($using_cms -eq $true))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -Xmn$env:HEAP_NEWSIZE"
+    }
+
+    if (($env:JVM_ARCH -eq "64-Bit") -and ($using_cms -eq $true))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseCondCardMark"
+    }
+
     # Add sigar env - see Cassandra-7838
     $env:JVM_OPTS = "$env:JVM_OPTS -Djava.library.path=""$env:CASSANDRA_HOME\lib\sigar-bin"""
 
@@ -354,11 +413,27 @@ Function SetCassandraEnvironment
         }
     }
 
+    # provides hints to the JIT compiler
+    $env:JVM_OPTS = "$env:JVM_OPTS -XX:CompileCommandFile=$env:CASSANDRA_CONF\hotspot_compiler"
+
     # add the jamm javaagent
     if (($env:JVM_VENDOR -ne "OpenJDK") -or ($env:JVM_VERSION.CompareTo("1.6.0") -eq 1) -or
         (($env:JVM_VERSION -eq "1.6.0") -and ($env:JVM_PATCH_VERSION.CompareTo("22") -eq 1)))
     {
         $env:JVM_OPTS = "$env:JVM_OPTS -javaagent:""$env:CASSANDRA_HOME\lib\jamm-0.3.0.jar"""
+    }
+
+    # set jvm HeapDumpPath with CASSANDRA_HEAPDUMP_DIR
+    if ($env:CASSANDRA_HEAPDUMP_DIR)
+    {
+        $unixTimestamp = [int64](([datetime]::UtcNow)-(get-date "1/1/1970")).TotalSeconds
+        $env:JVM_OPTS="$env:JVM_OPTS -XX:HeapDumpPath=$env:CASSANDRA_HEAPDUMP_DIR\cassandra-$unixTimestamp-pid$pid.hprof"
+    }
+
+    if ($env:JVM_VERSION.CompareTo("1.8.0") -eq -1 -or [convert]::ToInt32($env:JVM_PATCH_VERSION) -lt 40)
+    {
+        echo "Cassandra 3.0 and later require Java 8u40 or later."
+        exit
     }
 
     # enable assertions.  disabling this in production will give a modest
@@ -372,9 +447,6 @@ Function SetCassandraEnvironment
     # store in env to check if it's avail in verification
     $env:JMX_PORT=$JMX_PORT
 
-    # some JVMs will fill up their heap when accessed via JMX, see CASSANDRA-6541
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+CMSClassUnloadingEnabled"
-
     # enable thread priorities, primarily so we can give periodic tasks
     # a lower priority to avoid interfering with client workload
     $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseThreadPriorities"
@@ -383,11 +455,6 @@ Function SetCassandraEnvironment
     # see http://tech.stolsvik.com/2010/01/linux-java-thread-priorities-workar
     $env:JVM_OPTS="$env:JVM_OPTS -XX:ThreadPriorityPolicy=42"
 
-    # min and max heap sizes should be set to the same value to avoid
-    # stop-the-world GC pauses during resize.
-    $env:JVM_OPTS="$env:JVM_OPTS -Xms$env:MAX_HEAP_SIZE"
-    $env:JVM_OPTS="$env:JVM_OPTS -Xmx$env:MAX_HEAP_SIZE"
-    $env:JVM_OPTS="$env:JVM_OPTS -Xmn$env:HEAP_NEWSIZE"
     $env:JVM_OPTS="$env:JVM_OPTS -XX:+HeapDumpOnOutOfMemoryError"
 
     # Per-thread stack size.
@@ -396,42 +463,20 @@ Function SetCassandraEnvironment
     # Larger interned string table, for gossip's benefit (CASSANDRA-6410)
     $env:JVM_OPTS="$env:JVM_OPTS -XX:StringTableSize=1000003"
 
-    # GC tuning options
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseParNewGC"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseConcMarkSweepGC"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+CMSParallelRemarkEnabled"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:SurvivorRatio=8"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:MaxTenuringThreshold=1"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:CMSInitiatingOccupancyFraction=75"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
+    # Make sure all memory is faulted and zeroed on startup.
+    # This helps prevent soft faults in containers and makes
+    # transparent hugepage allocation more effective.
+    #$env:JVM_OPTS="$env:JVM_OPTS -XX:+AlwaysPreTouch"
+
+    # Biased locking does not benefit Cassandra.
+    $env:JVM_OPTS="$env:JVM_OPTS -XX:-UseBiasedLocking"
+
+    # Enable thread-local allocation blocks and allow the JVM to automatically
+    # resize them at runtime.
+    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseTLAB -XX:+ResizeTLAB"
+
+    # http://www.evanjones.ca/jvm-mmap-pause.html
     $env:JVM_OPTS="$env:JVM_OPTS -XX:+PerfDisableSharedMem"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseTLAB"
-    if (($env:JVM_VERSION.CompareTo("1.7") -eq 1) -and ($env:JVM_ARCH -eq "64-Bit"))
-    {
-        $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseCondCardMark"
-    }
-    if ( (($env:JVM_VERSION.CompareTo("1.7") -ge 0) -and ($env:JVM_PATCH_VERSION.CompareTo("60") -ge 0)) -or
-         ($env:JVM_VERSION.CompareTo("1.8") -ge 0))
-    {
-        $env:JVM_OPTS="$env:JVM_OPTS -XX:+CMSParallelInitialMarkEnabled -XX:+CMSEdenChunksRecordAlways"
-    }
-
-    # GC logging options
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCDetails"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCDateStamps"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintHeapAtGC"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintTenuringDistribution"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCApplicationStoppedTime"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintPromotionFailure"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:PrintFLSStatistics=1"
-
-    $env:JVM_OPTS="$env:JVM_OPTS -Xloggc:""$env:CASSANDRA_HOME/logs/gc.log"""
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseGCLogFileRotation"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:NumberOfGCLogFiles=10"
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:GCLogFileSize=10M"
-    # if using version before JDK 6u34 or 7u2 use this instead of log rotation
-    # $currentDate = (Get-Date).ToString('yyyy.MM.dd')
-    # $env:JVM_OPTS="$env:JVM_OPTS -Xloggc:$env:CASSANDRA_HOME/logs/gc-$currentDate.log"
 
     # Configure the following for JEMallocAllocator and if jemalloc is not available in the system
     # library path.
@@ -458,7 +503,7 @@ Function SetCassandraEnvironment
     #
     # Due to potential security exploits, Cassandra ships with JMX accessible
     # *only* from localhost.  To enable remote JMX connections, uncomment lines below
-    # with authentication and ssl enabled. See https://wiki.apache.org/cassandra/JmxSecurity 
+    # with authentication and ssl enabled. See https://wiki.apache.org/cassandra/JmxSecurity
     #
     #$env:JVM_OPTS="$env:JVM_OPTS -Dcom.sun.management.jmxremote.port=$JMX_PORT"
     #$env:JVM_OPTS="$env:JVM_OPTS -Dcom.sun.management.jmxremote.ssl=false"
